# mcpserver

./: .gitignore  README.md  pyproject.toml
src/mcpserver/: deployment.py
