[project]
name = "mcp-server-deepdive-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.23.3",
    "requests>=2.32.5",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build.system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
package-dir = {"" = "src"}

[tools.setuptools.packages.find]
where = ["src"]

